--- a/TKW_TranLeTrieuDuong/1.5/table.html
+++ b/TKW_TranLeTrieuDuong/1.5/table.html
@@ -4,110 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
-    <style>
-        table{
-            border: 1px solid black;
-        }
-        .c{
-            background-color: aquamarine;
-
-        }
-    </style>
 </head>
 <body>
-    <h3><b>Học kỳ 1</b></h3>
-    <table>
-        <thead>
-            <div>
-                <th>STT</th>
-                <th>Mã học phần</th>
-                <th>Tên học phần</th>
-                <th>Số tín chỉ</th>
-                <th>Loại học phần</th>
-            </div> 
+    <h4><b>Học kỳ 1</b></h4>
+    <table border="1" cellspacing="0" cellpadding="3">
+        <thead style="color: white; background-color: black;">   
+            <th>STT</th>
+            <th>Mã học phần</th>
+            <th>Tên học phần</th>
+            <th>Số tín chỉ</th>
+            <th>Loại học phần</th>
         </thead>
         <tbody>
-            <div class="l">
-                <tr>
-                    <td>1</td>
-                    <td>COMP1010</td>
-                    <td>Lập trình cơ bản</td>
-                    <td>3.00</td>
-                    <td>Bắt buộc</td>
-                </tr>
-            </div>
-            <div class="c">
-                <tr>
-                    <td>2</td>
-                    <td>COMP1800</td>
-                    <td>Cơ sở toán trong Công nghệ thông tin</td>
-                    <td>4.00</td>
-                    <td>Bắt buộc</td>
-                </tr>
-            </div>
-            <div class="l">
-                <tr>
-                    <td>3</td>
-                    <td>COMP1801</td>
-                    <td>Toán rời rạc và ứng dụng</td>
-                    <td>2.00</td>
-                    <td>Bắt buộc</td>
-                </tr>
-            </div>
-            <div class="c">
-                <tr>
-                    <td>4</td>
-                    <td>COMP1802</td>
-                    <td>Thiết kế web</td>
-                    <td>2.00</td>
-                    <td>Bắt buộc</td>
-                </tr>
-            </div>
-            <div class="l">
-                <tr>
-                    <td>5</td>
-                    <td>MILI2701</td>
-                    <td>Đường lối quốc phòng và an ninh của Đảng Cộng sản Việt Nam</td>
-                    <td>3.00</td>
-                    <td>Bắt buộc</td>
-                </tr>
-            </div>
-            <div class="c">
-                <tr>
-                    <td>6</td>
-                    <td>POLI1903</td>
-                    <td>Pháp luật đại cương</td>
-                    <td>2.00</td>
-                    <td>Bắt buộc</td>
-                </tr>
-            </div>
-            <div class="l">
-                <tr>
-                    <td>7</td>
-                    <td>POLI2001</td>
-                    <td>Triết học Mác - Lênin</td>
-                    <td>3.00</td>
-                    <td>Bắt buộc</td>
-                </tr>
-            </div>
-            <div class="c">
-                <tr>
-                    <td>8</td>
-                    <td>PSYC1001</td>
-                    <td>Tâm lý học đại cương</td>
-                    <td>2.00</td>
-                    <td>Bắt buộc</td>
-                </tr>
-            </div>
-            <div class="l">
-                <tr>
-                    <td>9</td>
-                    <td>PHYL2401</td>
-                    <td>Giáo dục thể chất 1 (Thể dục - Điền kinh)</td>
-                    <td>1.00</td>
-                    <td>Tự chọn</td>
-                </tr>
-            </div>         
+            <tr style="background-color:deepskyblue;">
+                <td>1</td>
+                <td>COMP1010</td>
+                <td>Lập trình cơ bản</td>
+                <td>3.00</td>
+                <td>Bắt buộc</td>
+            </tr>
+            <tr style="background-color: burlywood;">
+                <td>2</td>
+                <td>COMP1800</td>
+                <td>Cơ sở toán trong Công nghệ thông tin</td>
+                <td>4.00</td>
+                <td>Bắt buộc</td>
+            </tr>
+            <tr style="background-color:deepskyblue;">
+                <td>3</td>
+                <td>COMP1801</td>
+                <td>Toán rời rạc và ứng dụng</td>
+                <td>2.00</td>
+                <td>Bắt buộc</td>
+            </tr>
+            <tr style="background-color: burlywood;">
+                <td>4</td>
+                <td>COMP1802</td>
+                <td>Thiết kế web</td>
+                <td>2.00</td>
+                <td>Bắt buộc</td>
+            </tr>
+            <tr style="background-color:deepskyblue;">
+                <td>5</td>
+                <td>MILI2701</td>
+                <td>Đường lối quốc phòng và an ninh của Đảng Cộng sản Việt Nam</td>
+                <td>3.00</td>
+                <td>Bắt buộc</td>
+            </tr>
+            <tr style="background-color: burlywood;">
+                <td>6</td>
+                <td>POLI1903</td>
+                <td>Pháp luật đại cương</td>
+                <td>2.00</td>
+                <td>Bắt buộc</td>
+            </tr>
+            <tr style="background-color:deepskyblue;">
+                <td>7</td>
+                <td>POLI2001</td>
+                <td>Triết học Mác - Lênin</td>
+                <td>3.00</td>
+                <td>Bắt buộc</td>
+            </tr>
+            <tr style="background-color: burlywood;">
+                <td>8</td>
+                <td>PSYC1001</td>
+                <td>Tâm lý học đại cương</td>
+                <td>2.00</td>
+                <td>Bắt buộc</td>
+            </tr>
+            <tr style="background-color:deepskyblue;">
+                <td>9</td>
+                <td>PHYL2401</td>
+                <td>Giáo dục thể chất 1 (Thể dục - Điền kinh)</td>
+                <td>1.00</td>
+                <td>Tự chọn</td>
+            </tr>        
         </tbody>
     </table>
 </body>
